// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Basic renders correctly 1`] = `
<div>
  <div
    class="css-1m8tih5-boxStyles-Card"
  >
    <div
      class="css-1j647ly-boxStyles"
    >
      <div
        class="css-zb2sjq-boxStyles"
      >
        <h2
          class="css-lltnmr-boxStyles"
        >
          Card heading
        </h2>
        <p
          class="css-1pd2agg-boxStyles-Text"
        >
          Lorem ipsum dolor, sit amet consectetur adipisicing elit. In, voluptat
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card With link renders correctly 1`] = `
<div>
  <div
    class="css-1z0lqm5-boxStyles-Card"
  >
    <div
      class="css-1j647ly-boxStyles"
    >
      <div
        class="css-zb2sjq-boxStyles"
      >
        <h2
          class="css-lltnmr-boxStyles"
        >
          Card heading
        </h2>
        <p
          class="css-1pd2agg-boxStyles-Text"
        >
          Lorem ipsum dolor, sit amet consectetur adipisicing elit. In, voluptat
        </p>
        <a
          class="css-190821o-CardLink"
          href="#"
        >
          Linking out
          <svg
            aria-hidden="true"
            class="css-9s3cfn-Icon"
            clip-rule="evenodd"
            fill-rule="evenodd"
            focusable="false"
            height="24"
            role="img"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <polyline
              points="9 18 15 12 9 6"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</div>
`;
